# ContextGuard

./: .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  LICENSE  README.md  changy.md
contextguard/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  changy.md  pyproject.toml
contextguard/.codex-plugin/: plugin.json
contextguard/benchmarks/: README.md  __init__.py  host_capture_ab.py  install_acceptance.py  real_codex_ab.py  real_codex_backend_ab.py  real_codex_ci_ab.py  real_codex_model_routing_ab.py  real_codex_support_ab.py  run_benchmarks.py
contextguard/contextguard/: __init__.py  cli.py  command_classifier.py  command_rewriter.py  config.py  context_capsule.py  database.py  documentation.py  fingerprints.py  hook_diagnostics.py  index.py  large_file.py  metrics.py  model_router.py  onboarding.py  optimization_advisor.py  output_capture.py  output_compactor.py  output_policy.py  project.py  project_runner.py  repo_map.py  session_state.py  summarize_csv.py  summarize_json.py  summarize_jsonl.py  summarize_log.py  task_classifier.py  utils.py
contextguard/hooks/: _bootstrap.py  hooks.json  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_start.py  subagent_stop.py  user_prompt_submit.py
contextguard/scripts/: contextguard
contextguard/tests/: test_benchmarks.py  test_cli_flows.py  test_command_classifier.py  test_command_rewriter.py  test_context_capsule.py  test_documentation_safety.py  test_hooks.py  test_host_capture_ab.py  test_install_acceptance.py  test_large_file.py  test_model_router.py  (+14 more)
(+40 files in other folders)
