[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contextguard"
version = "0.1.0"
description = "Local-first Codex context and output optimization plugin."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Giminger Consulting"}]
dependencies = []

[project.scripts]
contextguard = "contextguard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
